...
                  </TouchableOpacity>
                ))}
              </View>
            )}
          </View>
          <TouchableOpacity
            testID="addInventoryOpenButton"
            style={styles.redAddButton}
            onPress={() => {
              setEditingItem(null);
              setBloodType("AB+");
              setUnits("");
              setModalVisible(true);
...
